--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,13 @@
-name: CD Deploy to VPS (SCP)
+name: Simple CI
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Get Code
+        uses: actions/checkout@v3
 
-      - name: Copy files to VPS
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: 82.112.238.89
-          username: root
-          key: ${{ VPS_USER }}
-          source: "."
-          target: "/var/www/html"
+      - name: Run Test
+        run: echo "Code checked successfully"
